:sparkles: feat: GetTredingGame controller
